
lib_LIBRARIES = libimbe_vocoder.a

# These are the source files that go into the shared library
libimbe_vocoder_a_SOURCES = 			\
	aux_sub.cc \
	basicop2.cc \
	ch_decode.cc \
	ch_encode.cc \
	dc_rmv.cc \
	decode.cc \
	dsp_sub.cc \
	encode.cc \
	math_sub.cc \
	imbe_vocoder.cc \
	pe_lpf.cc \
	pitch_est.cc \
	pitch_ref.cc \
	qnt_sub.cc \
	rand_gen.cc \
	sa_decode.cc \
	sa_encode.cc \
	sa_enh.cc \
	tbls.cc \
	uv_synt.cc \
	v_synt.cc \
	v_uv_det.cc
